Add Snippet - AddonsCounter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
     "Pluss",
     "quickswitcher",
     "Reimagined",
+    "Skamt",
     "strikethrough",
     "Strikethrough",
     "Surpressed",
